Fix: Improve display of carousel arrows

--- a/src/styles/style/_flickity.scss
+++ b/src/styles/style/_flickity.scss
@@ -10,9 +10,9 @@
 		user-select: none;
 	}
 
-	.is-cropped & {
-		position: inherit;
-	}
+	// .is-cropped & {
+	// 	position: inherit;
+	// }
 }
 
 .flickity-viewport {
