Add support for primaryCaption and a caption for the Carousel block

--- a/src/blocks/carousel/styles/editor.scss
+++ b/src/blocks/carousel/styles/editor.scss
@@ -24,4 +24,10 @@
 		position: inherit;
 		height: 100% !important;
 	}
+
+	// Outside caption.
+	.editor-rich-text {
+		margin-top: 15px;
+		margin-bottom: -7px;
+	}
 }
