--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -43,3 +43,8 @@
 .components-blockgallery-inspector__lightbox {
 	display: none !important;
 }
+
+.blockgallery--primary-caption {
+	padding-top: 0;
+	margin-bottom: 0 !important;
+}
