Touch up carousel captions

--- a/src/blocks/carousel/styles/editor.scss
+++ b/src/blocks/carousel/styles/editor.scss
@@ -25,9 +25,9 @@
 		height: 100% !important;
 	}
 
-	// Outside caption.
+	// Primary caption.
 	.editor-rich-text {
-		margin-top: 15px;
+		margin-top: 13px;
 		margin-bottom: -7px;
 	}
 }
