Touch up lightbox control styling

--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -41,7 +41,7 @@
 }
 
 .components-blockgallery-inspector__lightbox {
-	display: none !important;
+	display: none;
 }
 
 .blockgallery--primary-caption {
