--- a/src/blocks/stacked/styles/style.scss
+++ b/src/blocks/stacked/styles/style.scss
@@ -19,7 +19,10 @@
 		padding-bottom: 1em;
 		margin-top: 1em;
 		text-align: center;
-		font-size: 13px;
+
+		&:not([class*="font-size"]) {
+			font-size: 13px;
+		}
 	}
 
 	.has-fullwidth-images img {
