--- a/src/blocks/stacked/styles/style.scss
+++ b/src/blocks/stacked/styles/style.scss
@@ -17,7 +17,7 @@
 
 	.blockgallery--caption {
 		padding-bottom: 1em;
-		margin-top: 1em;
+		padding-top: 1em;
 		text-align: center;
 
 		&:not([class*="font-size"]) {
