--- a/src/styles/editor/_flickity-arrows.scss
+++ b/src/styles/editor/_flickity-arrows.scss
@@ -4,7 +4,7 @@
 	.flickity-prev-next-button {
 		background-color: $blue;
 		border: none;
-		box-shadow: 0 0 0 1px rgba(#000, 0.08);
+		// box-shadow: 0 0 0 1px rgba(#000, 0.08);
 		width: 38px;
 		height: 38px;
 		border-radius: 4px;
