--- a/src/styles/editor/_flickity-arrows.scss
+++ b/src/styles/editor/_flickity-arrows.scss
@@ -1,15 +1,14 @@
-.has-no-arrows,
-.editor-block-list__block[data-type="blockgallery/thumbnails"] {
+.has-no-arrows {
 
 	.flickity-prev-next-button {
 		background-color: $blue;
 		border: none;
-		// box-shadow: 0 0 0 1px rgba(#000, 0.08);
 		width: 38px;
 		height: 38px;
 		border-radius: 4px;
 		opacity: 1;
 		display: none;
+		transition: none;
 
 		&:hover {
 			background-color: #007eb1;
@@ -42,8 +41,12 @@
 			}
 		}
 	}
+
+	&.blockgallery.is-selected .flickity-prev-next-button {
+		display: block;
+	}
 }
 
-.blockgallery.is-selected .flickity-prev-next-button {
-	display: block;
+.has-no-dots .flickity-page-dots {
+	display: none !important;
 }
