--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -48,3 +48,9 @@
 	padding-top: 0;
 	margin-bottom: 0 !important;
 }
+
+.editor-media-placeholder[class*="blockgallery"] .components-placeholder__label .dashicon {
+	margin-right: 0.7ch;
+	position: relative;
+	top: -2px;
+}
