--- a/src/styles/editor/_inspector-tabs.scss
+++ b/src/styles/editor/_inspector-tabs.scss
@@ -1,59 +1,45 @@
 .components-blockgallery-inspector__tabs {
-	margin-bottom: 1em;
 	position: relative;
+	display: flex;
+	flex-direction: row-reverse;
+	align-items: center;
 
 	&-item {
 		appearance: none;
 		background: $white;
-		border-radius: 3px;
-		border: 1px solid $dark-gray-150;
-		color: $dark-gray-150;
-		color: #555;
-		height: 22px;
+		border-radius: 4px;
+		border: 2px solid #6c7781;
+		color: #6c7781;
+		height: 28px;
 		line-height: 1;
-		padding-left: 9px;
-		padding-right: 9px;
 		margin: 0;
+		padding-left: 6px;
+		padding-right: 6px;
 
-		&:not(.is-active):hover {
-			background: #fafafa;
-			border-color: #999;
-			color: $dark-gray-800;
-			box-shadow: inset 0 -1px 0 #999;
+		&:focus {
+			border-color: #00a0d2 !important;
+			color: #00a0d2;
+			outline-offset: -2px;
+			outline: 2px solid transparent;
 		}
 
-		&:not(.is-active):active {
-			background: #eee;
-			border-color: #999;
-			box-shadow: inset 0 1px 0 #999;
+		&:not(.is-active):hover {
+			color: #555d66;
+			cursor: pointer;
 		}
 
 		&.is-active {
-			background: #0185ba;
-			border-color: #006a95;
+			background: #6c7781;
+			border-color: #6c7781;
 			color: $white;
 			z-index: 1;
 
-			&:hover {
-				background: #007eb1;
-				border-color: #00435d;
-				box-shadow: inset 0 -1px 0 #00435d;
-			}
-
-			&:active {
-				background: #006a95;
-				border-color: #00435d;
-				box-shadow: inset 0 1px 0 #00435d;
+			&:focus {
+				background: #00a0d2;
 			}
 		}
 
-		svg {
-			height: 15px;
-			position: relative;
-			width: 15px;
-		}
-
-		&--mobile {
+		&:first-of-type {
 			border-top-right-radius: 0;
 			border-bottom-right-radius: 0;
 
@@ -62,7 +48,7 @@
 			}
 		}
 
-		&--desktop {
+		&:last-of-type {
 			border-top-left-radius: 0;
 			border-bottom-left-radius: 0;
 
@@ -70,11 +56,21 @@
 				border-left: none;
 			}
 		}
+
+		svg {
+			height: 15px;
+			position: relative;
+			width: 15px;
+			top: 1px;
+		}
 	}
 
 	.components-tab-panel__tabs {
-		position: absolute;
-		right: 1px;
-		top: -3px;
+		align-items: center;
+		display: flex;
+		margin-left: 5px;
+		margin-right: 1px;
+		position: relative;
+		top: 7px;
 	}
 }
