Add tab navigation support for gallery images

--- a/src/styles/editor/_gallery-item.scss
+++ b/src/styles/editor/_gallery-item.scss
@@ -5,6 +5,11 @@
 		outline: none;
 	}
 
+	img:focus {
+		outline: none;
+		box-shadow: inset 0 0 0 4px #0085ba;
+	}
+
 	.is-selected {
 
 		&::after {
