--- a/src/styles/editor/_inspector-tabs.scss
+++ b/src/styles/editor/_inspector-tabs.scss
@@ -4,17 +4,33 @@
 	flex-direction: row-reverse;
 	align-items: center;
 
+
+	.components-tab-panel__tab-content {
+		width: 100%;
+	}
+
 	&-item {
 		appearance: none;
 		background: $white;
 		border-radius: 4px;
-		border: 2px solid #6c7781;
+		border: 1px solid #6c7781;
 		color: #6c7781;
 		height: 28px;
 		line-height: 1;
 		margin: 0;
-		padding-left: 6px;
-		padding-right: 6px;
+		padding-left: 7px;
+		padding-right: 7px;
+
+		@media (max-width: 782px) {
+			height: 40px;
+			padding-left: 17px;
+			padding-right: 17px;
+		}
+
+		@media (max-width: 514px) {
+			padding-left: 10px;
+			padding-right: 10px;
+		}
 
 		&:focus {
 			border-color: #00a0d2 !important;
@@ -61,14 +77,14 @@
 			height: 15px;
 			position: relative;
 			width: 15px;
-			top: 1px;
+			top: 0.08em;
 		}
 	}
 
 	.components-tab-panel__tabs {
 		align-items: center;
 		display: flex;
-		margin-left: 5px;
+		margin-left: 6px;
 		margin-right: 1px;
 		position: relative;
 		top: 7px;
