--- a/src/styles/editor/_inspector.scss
+++ b/src/styles/editor/_inspector.scss
@@ -5,8 +5,8 @@
 	margin-bottom: 1.7em;
 
 	&--label {
-		margin-bottom: 0.3em;
-		margin-top: 1.4em !important;
+		display: block;
+		margin-bottom: 4px;
 	}
 
 	.components-range-control + &--label {
