--- a/src/styles/editor/_inspector-tabs.scss
+++ b/src/styles/editor/_inspector-tabs.scss
@@ -17,7 +17,7 @@
 		appearance: none;
 		background: $white;
 		border-radius: 4px;
-		border: 1px solid #6c7781;
+		border: 1px solid #8d96a0;
 		color: #6c7781;
 		height: 28px;
 		line-height: 1;
@@ -43,7 +43,16 @@
 			outline: 2px solid transparent;
 		}
 
+		&:not(.is-active):active:enabled {
+			background: #eee;
+			border-color: #999;
+			box-shadow: inset 0 1px 0 #999;
+		}
+
 		&:not(.is-active):hover {
+			background: #fafafa;
+			border-color: #999;
+			box-shadow: inset 0 -1px 0 #999;
 			color: #555d66;
 			cursor: pointer;
 		}
