Tweak: Use better specificity for figcaption margins

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -14,13 +14,13 @@
 			position: relative;
 		}
 
-		figcaption {
-			margin: 0 !important;
-		}
-
 		img {
 			vertical-align: middle;
 		}
+	}
+
+	& &--item figcaption {
+		margin: 0 !important;
 	}
 
 	&:not(.has-padding) {
