Add styling for TwentySeventeen

--- a/src/blocks/stacked/styles/style.scss
+++ b/src/blocks/stacked/styles/style.scss
@@ -31,6 +31,12 @@
 		&:not([class*="font-size"]) {
 			font-size: 13px;
 		}
+
+		.is-selected &,
+		.is-typing & {
+			padding-left: 1em;
+			padding-right: 1em;
+		}
 	}
 
 	.has-fullwidth-images img {
