--- a/src/styles/style/_themes.scss
+++ b/src/styles/style/_themes.scss
@@ -1,10 +1,6 @@
 .is-twenty-seventeen {
 
 	// Frontend.
-	.wp-block-blockgallery-masonry figcaption {
-		padding-bottom: 6px;
-	}
-
 	.entry-content div[class*="wp-block-blockgallery"] {
 		margin-top: 1.65em;
 		margin-bottom: 1.75em;
@@ -23,6 +19,10 @@
 		}
 	}
 
+	.wp-block-blockgallery-masonry figcaption {
+		padding-bottom: 6px;
+	}
+
 	// Editor.
 	.blockgallery--primary-caption.editor-rich-text__tinymce {
 		text-align: left;
@@ -31,14 +31,9 @@
 	}
 }
 
-
 .is-twenty-sixteen {
 
 	// Frontend.
-	.wp-block-blockgallery-masonry figcaption {
-		padding-bottom: 6px;
-	}
-
 	.entry-content div[class*="wp-block-blockgallery"] {
 		margin-top: 2.3em;
 		margin-bottom: 2.3em;
@@ -49,10 +44,67 @@
 		}
 	}
 
+	.wp-block-blockgallery-masonry figcaption {
+		padding-bottom: 6px;
+	}
+
 	// Editor.
 	.blockgallery--primary-caption.editor-rich-text__tinymce {
 		text-align: left;
 		font-style: italic;
 		margin-bottom: 0;
+	}
+}
+
+.is-twenty-fifteen {
+
+	// Frontend.
+	.entry-content div[class*="wp-block-blockgallery"] {
+		margin-top: 2.2em;
+		margin-bottom: 2.2em;
+
+		.blockgallery--primary-caption {
+			margin-top: 0.5em;
+			padding-bottom: 0;
+			margin-bottom: -15px;
+		}
+	}
+
+	.wp-block-blockgallery-masonry figcaption {
+		font-size: 13px !important;
+	}
+
+	// Editor.
+	.wp-block[data-type="blockgallery/carousel"] {
+		margin-bottom: 42px;
+		margin-top: 42px;
+	}
+
+	.blockgallery--primary-caption.editor-rich-text__tinymce {
+		color: #707070;
+		font-family: "Noto Sans", sans-serif;
+		font-size: 12px;
+		line-height: 1.5;
+		margin-bottom: -5px;
+
+		@media screen and (min-width: 46.25em) {
+			font-size: 14px;
+		}
+
+		@media screen and (min-width: 55em) {
+			font-size: 16px;
+		}
+
+		@media screen and (min-width: 59.6875em) {
+			font-size: 12px;
+		}
+
+		@media screen and (min-width: 68.75em) {
+			font-size: 14px;
+		}
+
+		@media screen and (min-width: 77.5em) {
+			font-size: 16px;
+		}
 	}
 }
