Split core theme editor and frontend styling

--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -13,6 +13,7 @@
 @import "editor/radius";
 @import "editor/is-background-transient";
 @import "editor/flickity-arrows";
+@import "editor/core-themes";
 
 .blockgallery-logo--svg {
 	fill: currentColor;
