--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -107,4 +107,4 @@ figcaption.blockgallery--primary-caption {
 @import "style/background-parallax";
 @import "style/background-radius";
 @import "style/flickity";
-@import "style/themes";
+@import "style/core-themes";
