--- a/src/styles/editor/_core-themes.scss
+++ b/src/styles/editor/_core-themes.scss
@@ -1,6 +1,7 @@
 .is-twentysixteen,
 .is-twentyseventeen,
-.is-twentythirteen {
+.is-twentythirteen,
+.is-twentytwelve {
 
 	.blockgallery--primary-caption.editor-rich-text__tinymce {
 		text-align: left;
@@ -66,5 +67,23 @@
 	.blockgallery--primary-caption.editor-rich-text__tinymce {
 		padding: 0;
 		margin-top: 8px;
+	}
+}
+
+
+.is-twentytwelve {
+
+	// Override the theme's border radius behavior for our blocks.
+	.blockgallery:not([class*="border-radius"]) img {
+		border-radius: inherit;
+	}
+
+	.blockgallery--primary-caption.editor-rich-text__tinymce {
+		padding: 0;
+		margin-top: 1.1em;
+	}
+
+	.wp-block[data-type="blockgallery/stacked"] figcaption {
+		text-align: center !important;
 	}
 }
