--- a/src/blocks/masonry/styles/style.scss
+++ b/src/blocks/masonry/styles/style.scss
@@ -19,12 +19,12 @@
 	}
 
 	figcaption {
-		position: absolute;
+		position: absolute !important;
 		bottom: 0;
 		width: 100%;
-		max-height: 100%;
+		max-height: 100% !important;
 		overflow: auto;
-		padding: 30px 10px 10px;
+		padding: 30px 10px 10px !important;
 		opacity: 0.9;
 		text-align: center;
 		font-size: 13px;
