--- a/src/styles/style/_grid.scss
+++ b/src/styles/style/_grid.scss
@@ -39,12 +39,14 @@
 		width: 1 / 4 * 100%;
 	}
 
-	@media (min-width: 1600px) {
-		width: 1 / 5 * 100%;
-	}
+	.alignfull & {
+		@media (min-width: 1600px) {
+			width: 1 / 5 * 100%;
+		}
 
-	@media (min-width: 1900px) {
-		width: 1 / 6 * 100%;
+		@media (min-width: 1900px) {
+			width: 1 / 6 * 100%;
+		}
 	}
 }
 
@@ -58,8 +60,14 @@
 		width: 1 / 3 * 100%;
 	}
 
-	@media (min-width: 1600px) {
-		width: 1 / 4 * 100%;
+	.alignfull & {
+		@media (min-width: 1600px) {
+			width: 1 / 4 * 100%;
+		}
+
+		@media (min-width: 1900px) {
+			width: 1 / 5 * 100%;
+		}
 	}
 }
 
@@ -67,6 +75,16 @@
 
 	@media (min-width: 400px) {
 		width: 1 / 2 * 100%;
+	}
+
+	.alignfull & {
+		@media (min-width: 1600px) {
+			width: 1 / 3 * 100%;
+		}
+
+		@media (min-width: 1900px) {
+			width: 1 / 4 * 100%;
+		}
 	}
 }
 
