Add block styles for Twenty Nineteen

--- a/src/styles/editor/_core-themes.scss
+++ b/src/styles/editor/_core-themes.scss
@@ -10,6 +10,18 @@
 	}
 }
 
+.is-twentynineteen {
+
+	@include blockGalleryEditorBlocks {
+		margin-bottom: 48px;
+		margin-top: 50px;
+	}
+
+	.blockgallery--primary-caption {
+		margin-bottom: -10px;
+	}
+}
+
 .is-twentyfifteen {
 
 	@include blockGalleryEditorBlocks {
