Resolve issue where image radius styles were not applied to child captions

--- a/src/styles/style/_radius.scss
+++ b/src/styles/style/_radius.scss
@@ -6,5 +6,9 @@
 		.blockgallery--item img {
 			border-radius: #{ $i }px;
 		}
+
+		.blockgallery--item figcaption {
+			border-radius: 0 0 #{ $i }px #{ $i }px;
+		}
 	}
 }
