--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -5,6 +5,7 @@
 @import "editor/core/mixins";
 
 // Our modules
+@import "editor/icons";
 @import "editor/gallery-item";
 @import "editor/remove-gallery-item-button";
 @import "editor/gallery-upload";
@@ -14,16 +15,6 @@
 @import "editor/is-background-transient";
 @import "editor/flickity-arrows";
 @import "editor/core-themes";
-
-.blockgallery-logo--svg {
-	fill: currentColor;
-	position: relative;
-
-	&.components-panel__icon {
-		margin-left: 7px;
-		top: 1px;
-	}
-}
 
 .components-toolbar {
 
