--- a/src/styles/editor/_inspector.scss
+++ b/src/styles/editor/_inspector.scss
@@ -71,11 +71,10 @@
 	margin-bottom: 2em !important;
 }
 
-.components-blockgallery-inspector__background-remove-button {
-	justify-content: center;
-	line-height: 26px;
-	width: 100%;
-	display: none;
+.components-button--blockgallery-remove-background-image {
+	// justify-content: center;
+	// line-height: 26px;
+	// width: 100%;
 }
 
 .components-blockgallery-inspector__background-image-overlay {
